- fixed Makefile verbosity
- fixed chroot jail for curl
- fixed aggregator.lua (thanks to bimbosuper)
- added games.gamespot.com and news.gamespot.com aggregator domains
- updated the website with FAQ section
- documentation for curl_lua and psock
- moved popforward from luasocket to psock (poor but works)
- added portablesocket_lua module
- updated libero.lua to new browser.lua
- updated serialize.lua to support "self serializing" objects
- updates support.lua to support new browser.lua
- updated browser.lua do cURL
- moved to cURL
- added curl_lua module
01/05/2004 0.0.1 first public release